style.css
nav {
  font-size: 12px;
}

body {
  font-family: "Open Sans", sans-serif;
  font-size: 16px;
}

.gradient-background {
  background: linear-gradient(300deg, #001F54, #00A3E0, #9FFFCB);
  background-size: 180% 180%;
  animation: gradient-animation 18s ease infinite;
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
}

@keyframes gradient-animation {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

#start {
  color: white;
}

nav, h1, h2, h5 {
  letter-spacing: 2px;
  font-family: "Montserrat", sans-serif;
  text-transform: uppercase;
}

.custom-container {
  height: 160px;
  background-color: #f0f0f0;
  border-radius: 10px;
}

section {
  padding-top: 20px;
  margin-top: -80px;
}

#resume {
  background-image: url(./images/grid-background.png);
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
  height:300px;
  color: #001F54;
  display: flex;
  justify-content: center;
  align-items: center;
}

button {
  background-color: rgba(0, 31, 84, 0.6);
  color: white; 
  border: none;
  font-size: 16px;
  transition: transform 0.3s ease;
  letter-spacing: 1px;
  margin-top: 10px;
  padding: 10px 20px;
  border-radius: 5px;
}

button:hover {
  transform: scale(1.1);
}

.modal-text {
  font-size: 15px;
}

.modal-header, .modal-footer {
  background-color: #f0f0f0;
}

@media (max-width: 768px) {
  .your-element {
      background-size: contain; /* Change for mobile */
      background-position: center; /* Center the image */
  }
}

